--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
 		<script src="generateWorld.js"></script>
 		<script src="controleShip.js"></script>
+		<script src="enemySpawner.js"></script>
+
 
 		<script>
 
@@ -70,7 +72,7 @@
 			//settings
 			var acceleration = 0.07;
 			var sideAcceleration = 0.05;
-			var topSpeed = 4;
+			var topSpeed = 10;
 			var topSideSpeed = 3;
 			//namespace variables
 			var moveForward = false;
@@ -157,7 +159,7 @@
 				scene.add(ambientLight);
 
 				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 700;
+				camera.position.z = 1400;
 
 				// key events
 				var onKeyDown = function ( event ) {
@@ -215,6 +217,8 @@
 				var onDocumentMouseUp = function ( event ) {
 					shooting = false;
 				};
+
+				setInterval(function(){ spawnEnemies(playerRotationWrapper, windowHalfX, windowHalfY) }, 3000);
 
 				document.addEventListener( 'keydown', onKeyDown, false );
 				document.addEventListener( 'keyup', onKeyUp, false );
@@ -277,6 +281,9 @@
 				render();
 			}
 
+
+			//timer checktospawnenemies every few seconds spawnEnemies()
+
 			function render() {
 				//var time = Date.now() * 0.0015;
 				//move
@@ -338,6 +345,7 @@
 				camera.position.x =playerRotationWrapper.position.x /*- camOffsetModifier*speedX*/;
 				camera.position.y =playerRotationWrapper.position.y /*- camOffsetModifier*speedY*/;
 				camera.lookAt( playerRotationWrapper.position );
+
 			}
 
 		</script>
