--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 			//settings
 			var acceleration = 0.07;
 			var sideAcceleration = 0.05;
-			var topSpeed = 4;
+			var topSpeed = 10;
 			var topSideSpeed = 3;
-			var attackSpeed = 10;
+			var attackSpeed = 4;
 			//namespace variables
 			var moveForward = false;
 			var moveBackward = false;
@@ -158,7 +158,7 @@
 				scene.add(ambientLight);
 
 				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 1400;
+				camera.position.z = 10000;
 
 				// key events
 				var onKeyDown = function ( event ) {
@@ -216,7 +216,7 @@
 					shooting = false;
 				};
 
-				setInterval(function(){ spawnEnemies(playerRotationWrapper, windowHalfX, windowHalfY) }, 3000);
+				spawnEnemies(playerRotationWrapper, windowHalfX, windowHalfY);
 
 				document.addEventListener( 'keydown', onKeyDown, false );
 				document.addEventListener( 'keyup', onKeyUp, false );
@@ -393,6 +393,10 @@
 				camera.position.x =playerRotationWrapper.position.x /*- camOffsetModifier*speedX*/;
 				camera.position.y =playerRotationWrapper.position.y /*- camOffsetModifier*speedY*/;
 				camera.lookAt( playerRotationWrapper.position );
+
+				var delta = clock.getDelta(); // Global
+			    var moveDistance = 125 * delta; // 200 pixels per second
+			    scene.getObjectByName("enemy" + 1).position.x += moveDistance;
 
 			}
 
