update starmap generation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
 			body {
-				background-color: #000000;
+				background-color: #000022;
 				margin: 0px;
 				overflow: hidden;
 			}
@@ -46,7 +46,7 @@
 		<script src="libs/stats.min.js"></script>
 		<script src="libs/OBJLoader.js"></script>
 
-		<script src="generateWorld.js"></script>
+		<script src="generateStarMap.js"></script>
 		<script src="enemySpawner.js"></script>
 
 
