--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<body>
 		<script src="node_modules/three/three.min.js"></script>
 
-		<script src="libs/hilbert3D.js"></script>s
+		<script src="libs/hilbert3D.js"></script>
 
 		<script src="libs/Detector.js"></script>
 		<script src="libs/stats.min.js"></script>
@@ -50,6 +50,8 @@
 		<script src="enemySpawner.js"></script>
 		<script src="cord.js"></script>
 		<script src="physic.js"></script>
+		<script src="public/models/mainShip.js"></script>
+		<script src="spawnMesh.js"></script>
 
 		<script>
 
@@ -90,6 +92,10 @@
 			animate();
 
 			function init() {
+				//get object first in stead of loading it by default into rootscope
+				//then call importMesh(object)
+
+
 				var i, container;
 
 				container = document.createElement( 'div' );
@@ -102,6 +108,8 @@
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				container.appendChild( renderer.domElement );
 				
+				var ship = spawnMesh(voxels);
+				scene.add(ship);
 
 				// player
 				scene.add( playerRotationWrapper );
@@ -158,7 +166,7 @@
 				scene.add(ambientLight);
 
 				camera = new THREE.PerspectiveCamera( 33, window.innerWidth / window.innerHeight, 1, 10000 );
-				camera.position.z = 1400;
+				camera.position.z = 2000;
 
 				// key events
 				var onKeyDown = function ( event ) {
