--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<script src="cord.js"></script>
 		<script src="physic.js"></script>
 		<script src="public/models/mainShip.js"></script>
+		<script src="public/models/bullet.js"></script>
 		<script src="spawnMesh.js"></script>
 
 		<script>
@@ -78,12 +79,6 @@
 
 			camera, scene, renderer;
 
-			var geometry = new THREE.BoxGeometry( 30, 30, 30 );
-			var material = new THREE.MeshBasicMaterial( { color: 0xffff00 } );
-			var lambertMaterial = new THREE.MeshLambertMaterial({shading: THREE.SmoothShading});
-			var player = new THREE.Mesh( geometry, material );
-			var geometry = new THREE.SphereGeometry( 30 );
-			var testObj = new THREE.Mesh( geometry, material );
 			var playerRotationWrapper = new THREE.Object3D();
 			//settings
 			var acceleration = 0.07;
@@ -110,19 +105,62 @@
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				container.appendChild( renderer.domElement );
+				// circle
+				var distance = 100;
+				var circle = [];
+				var pointPosition = {
+					x:distance,
+					y:0,
+					z:0
+				}
+				var pixelsize = 7;
+				var destiny = {};
+				var range=Math.PI/2
 
+				destiny.x=pointPosition.x;
+				destiny.y=pointPosition.y+pixelsize;
+				destiny.z=pointPosition.z;
+				corner1=cord.direction(pointPosition,destiny).angle;
+
+				destiny.x=pointPosition.x-pixelsize;
+				destiny.y=pointPosition.y;
+				destiny.z=pointPosition.z;
+				corner2=cord.direction(pointPosition,destiny).angle;
+				//console.log(corner1+corner2);
+				while(range>0){
+					//console.log(range);
+					//range = range - corner1 - corner2;
+					var pixel1=pixelMesh(7,'ffffff');
+					pixel1.position = {
+						x:1,
+						y:1,
+						z:1
+					}
+					cord.moveIndirection( pixel1.position , range-corner1 , distance );
+					console.log(distance);
+					scene.add(pixel1);
+					var pixel2=pixelMesh(7,'ffffff');
+					pixel2.position = {
+						x:1,
+						y:1,
+						z:1
+					}
+					cord.moveIndirection( pixel2.position , range-corner2 , distance );
+					scene.add(pixel2);
+					range = range-Math.PI/100;
+				}
 				// player
 				scene.add( playerRotationWrapper );
 				var object = new THREE.Object3D();
 				object.name = "mainSpaceship";
-				object.add(spawnMesh(voxels));
+				object.add(spawnMesh(ship));
 				playerRotationWrapper.add( object );
-				generateWorld(origin);
+				//generateWorld(origin);
 
 				//lights
-				var directionalLight = new THREE.DirectionalLight( 0xffffff, 0.8 );
+				var directionalLight = new THREE.DirectionalLight( 0xffffff, 0.4 );
 				directionalLight.position.set( 1, -0.5, 1 );
-				var directionalLight2 = new THREE.DirectionalLight( 0xffffff, 0.8 );
+				var directionalLight2 = new THREE.DirectionalLight( 0xffffff, 0.4 );
 				directionalLight2.position.set( -1, 0.5, 1 );
 				scene.add( directionalLight );
 				scene.add( directionalLight2 );
@@ -256,7 +294,7 @@
 				var maxCamOffset;
 				renderer.render( scene, camera );
 				camera.position.x =playerRotationWrapper.position.x /*- camOffsetModifier*speedX*/;
-				camera.position.y =playerRotationWrapper.position.y /*- camOffsetModifier*speedY*/;
+				camera.position.y =playerRotationWrapper.position.y-500;
 				camera.lookAt( playerRotationWrapper.position );
 			}
 
